Add description and author info

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@lblod/ember-rdfa-editor-time-overwrite-plugin",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Overwrite time in rdfa-editor documents.",
   "keywords": [
     "ember-addon"
   ],
   "repository": "",
   "license": "MIT",
-  "author": "",
+  "author": "redpencil.io",
   "directories": {
     "doc": "doc",
     "test": "tests"
